@@ -1,3 +1,9 @@
+2001-11-02  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : define-struct detection.  Partial ctor
+	support.  Still need to deal with ctor signiature collisions.
+	Refactored gen_method to share get_param_strings with ctors.
+
 2001-10-30  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl : streamline mkdir stuff.  Prune the object
